Fix double border on sign in text boxes, again

--- a/flipboard_dark.css
+++ b/flipboard_dark.css
@@ -70,7 +70,7 @@
 }
 
 .button:not(.facebook-connect), .input-wrapper, .button--secondary-inverse, .create-magazine__content-wrapper .text-input, .textarea, .share-flip__input,
-#item-caption-input, #get-email, .share-article-view .search-for-friends, .share-flip .button--secondary, .text-input {
+#item-caption-input, #get-email, .share-article-view .search-for-friends, .share-flip .button--secondary {
   border: 1px solid #AEAEAE !important;
 }
 
